--- a/TrafficPrediction.ipynb
+++ b/TrafficPrediction.ipynb
@@ -512,6 +512,7 @@
     }
    ],
    "source": [
+    "#Tried hist gradient boosting regressor, no luck"
     "from sklearn.experimental import enable_hist_gradient_boosting\n",
     "from sklearn.ensemble import HistGradientBoostingRegressor\n",
     "errlgb = []\n",
@@ -561,7 +562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample.to_csv(r'C:\\Users\\Ashish\\Desktop\\Data Science A-Z\\AVTraffic\\submission_br_folds.csv', index=False)"
+    "sample.to_csv(r'..\\submission_br_folds.csv', index=False)"
    ]
   },
   {
