--- a/TrafficPrediction.ipynb
+++ b/TrafficPrediction.ipynb
@@ -512,7 +512,7 @@
     }
    ],
    "source": [
-    "#Tried hist gradient boosting regressor, no luck"
+    "#Tried hist gradient boosting regressor, no luck\n",
     "from sklearn.experimental import enable_hist_gradient_boosting\n",
     "from sklearn.ensemble import HistGradientBoostingRegressor\n",
     "errlgb = []\n",
